force-app/main/default/objects/Contact/fields/Department_UK__c.field-meta.xml
<CustomField>
    <fullName>Department_UK__c</fullName>
    <description>Department&apos;s for UK Facilities</description>
    <inlineHelpText>Department&apos;s for UK Facilities</inlineHelpText>
    <label>Department (UK)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Manual Handling</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Med/Surg</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Tissue Viability</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>