force-app/main/default/objects/Contact/fields/Group_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Address__c</fullName>
    <label>Group Email Address</label>
    <type>Email</type>
</CustomField>