force-app/main/default/objects/Contact/fields/HRCSVC_After_Hours_Contact__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_After_Hours_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-1192</description>
    <label>After-Hours Contact</label>
    <type>Checkbox</type>
</CustomField>