force-app/main/default/objects/Contact/fields/HRCSVC_JDE_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_JDE_Account_External_Id__c</fullName>
    <formula>Account.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Account External Id</label>
    <type>Text</type>
</CustomField>