force-app/main/default/objects/Contact/fields/HRCSVC_Service_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in Flow HRCSVC_Email_Case_Contacts.
Created for #SE-766</description>
    <label>Service Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>