force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Facility Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Biomed</fullName>
            </value>
            <value>
                <fullName>Capital SWO Recipient</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Facilities/Engineering</fullName>
            </value>
            <value>
                <fullName>Facility Leadership</fullName>
            </value>
            <value>
                <fullName>Interim</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Materials Management</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Operating Room Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Rental SWO Recipient</fullName>
            </value>
            <value>
                <fullName>Respiratory Therapist</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Service Contracts SWO Recipient</fullName>
            </value>
            <value>
                <fullName>Wound Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>