force-app/main/default/objects/Contact/recordTypes/HRC_Contact.recordType-meta.xml
<RecordType>
    <fullName>HRC_Contact</fullName>
    <active>true</active>
    <description>North America and Canada Default Record Type for Contacts</description>
    <label>HRC Contact</label>
</RecordType>