force-app/main/default/objects/Contact/recordTypes/INT_Contacts.recordType-meta.xml
<RecordType>
    <fullName>INT_Contacts</fullName>
    <active>false</active>
    <label>INT Contact</label>
</RecordType>